--- a/ionic.project
+++ b/ionic.project
@@ -5,6 +5,12 @@
     "sass",
     "watch"
   ],
+  "proxies": [
+    {
+      "path": "/sprm",
+      "proxyUrl": "http://www.sprm.gov.my"
+    }
+  ],
   "watchPatterns": [
     "www/**/*",
     "!www/lib/**/*"
